<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEEEEE">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/main_logo"
            android:textSize="30sp" />
    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:id="@+id/llFunc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/user_management"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvUserInfo"
                style="@style/item_func"
                android:text="@string/user_info_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/user_logout"
                android:id="@+id/tvLogout"
                android:textColor="@color/red"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>
</FrameLayout>